--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon --config nodemon.json src/index.ts"
+    "dev": "nodemon --config nodemon.json src/index.ts",
+    "build": "tsc --build tsconfig.json",
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
